<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <name>${component.name}</name>
    <groupId>io.github.eckig</groupId>
    <artifactId>grapheditor</artifactId>
    <version>19.0.0</version>
    <packaging>pom</packaging>

    <description>A library for creating and editing graph-like diagrams in JavaFX</description>
    <url>https://github.com/eckig/graph-editor</url>

    <licenses>
        <license>
            <name>Eclipse Public License - v 1.0</name>
            <url>https://www.eclipse.org/legal/epl-v10.html</url>
        </license>
    </licenses>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <developers>
        <developer>
            <name>Robert Fisher</name>
            <email>rfisher@tesis.de</email>
            <organization>TESIS Dynaware GmbH</organization>
            <organizationUrl>http://www.tesis-dynaware.com</organizationUrl>
        </developer>
        <developer>
            <name>Steffen Rachner</name>
            <email>steffen.rachner@t-systems.com</email>
            <organization>T-Systems Information Services GmbH</organization>
            <organizationUrl>http://www.t-systems-ifs.com/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:eckig/graph-editor.git</connection>
        <developerConnection>scm:git:git@github.com:eckig/graph-editor.git</developerConnection>
        <url>git@github.com:eckig/graph-editor.git</url>
    </scm>

    <properties>
        <component.name>Graph Editor</component.name>
        <maven.build.timestamp.format>yyyymmddhhmm</maven.build.timestamp.format>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
        <maven.dependency.plugin.version>3.1.2</maven.dependency.plugin.version>
        <org.eclipse.emf.ecore.version>2.35.0</org.eclipse.emf.ecore.version>
        <org.eclipse.emf.common.version>2.29.0</org.eclipse.emf.common.version>
        <org.eclipse.emf.ecore.xmi.version>2.36.0</org.eclipse.emf.ecore.xmi.version>
        <org.eclipse.emf.edit.version>2.20.0</org.eclipse.emf.edit.version>
        <junit.version>4.13.2</junit.version>
        <org.slf4j.version>2.0.9</org.slf4j.version>
        <org.openjfx.version>21.0.1</org.openjfx.version>
        <openjfx-monocle.version>jdk-12.0.1+2</openjfx-monocle.version>
    </properties>

    <modules>
        <module>api</module>
        <module>core</module>
        <module>model</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <release>17</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.2</version>
                    <configuration>
                        <argLine>--add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED -Dprism.order=sw -Dglass.platform=Monocle -Dmonocle.platform=Headless</argLine>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.ow2.asm</groupId>
                            <artifactId>asm</artifactId>
                            <version>9.6</version>
                        </dependency>
                    </dependencies>
                    <executions>
                        <execution>
                            <goals>
                                <goal>test</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doclint>none</doclint>
                    <quiet>true</quiet>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
